--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -16,11 +16,14 @@ jobs:
       with:
         node-version: '10.x'
 
-    - name: Cache dependencies
-      uses: actions/cache@v1
+    - name: setup yarn
+      run: npm install -g yarn
+
+    - name: Cache node modules
+      uses: actions/cache@preview
       with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        path: node_modules
+        key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
         restore-keys: |
           ${{ runner.os }}-node-
 
