--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -28,10 +28,10 @@ jobs:
           ${{ runner.os }}-node-
 
     - name: install
-      run: npm install
+      run: yarn install
 
     - name: build
-      run: npm run build
+      run: yarn build
 
     - name: deploy
       uses: peaceiris/actions-gh-pages@v2.4.0
