update lint settings

--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
-      "@vue/airbnb"
+      "eslint:recommended",
+      "plugin:vue/recommended"
     ],
     "rules": {},
     "parserOptions": {
